syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

service Store {
  rpc GetLastEventID (GetLastEventIDRequest) returns (GetLastEventIDReply) {}
  rpc GetEvents (GetEventsRequest) returns (GetEventsReply) {}
}

message GetLastEventIDRequest {
  Filter filter = 1;
}

message GetLastEventIDReply {
  string event_id = 1;
}

message GetEventsRequest {
  string after_event_id = 1;
  int32 limit = 2;
  Filter filter = 3;
}

message Filter {
  repeated string aggregate_types = 1;
  repeated Label labels = 2;
}

message Label {
  string key = 1;
  string value = 2;
}

message GetEventsReply {
  repeated Event events = 1;
}

message Event {
	string id = 1;
	string aggregate_id = 2;
	int32 aggregate_version = 3;
	string aggregate_type = 4;
	string kind = 5;
	string body = 6;
	string idempotency_key = 7;
	string labels = 8;
	google.protobuf.Timestamp created_at =9;
}
